--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .gradient {
+    @apply bg-gradient-to-r from-primary to-secondary;
+  }
+  .text-gradient {
+    @apply font-medium text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary;
+  }
+}
+
 body {
   background-color: #00020d;
   color: white;
