--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ body {
 /* Track */
 ::-webkit-scrollbar-track {
   background: #002d43;
-  box-shadow: inset 0 0 3px gainsboro;
+  box-shadow: inset 0 0 3px #1a2980;
   border-radius: 4px;
 }
 
